css/main.scss
$gray-lighter: #fcfcfc;
$gray-light:   #f5f5f5;
$gray:         #e0e0e0;
$gray-dark:    #d0d0d0;
$gray-darker:  #333;
$accent:       #1874cd;

$gradient1:    #2c3e50;
$gradient2:    #4ca1af;

html, body {
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    font-size: 100%;
    background-color: $gray-light;
    margin: 0;
}

a {
    text-decoration: none;
    color: #000;
}

h3 {
    font-family: 'Roboto Slab', serif;
    font-weight: normal;
    margin: 1rem 0;
}

.container {
    font-size: inherit;
    position: absolute;
    top: 50%;
    left: 2rem;
    right: 2rem;
    max-width: 25rem;
    margin: 0 auto;
    background-color: $gray-lighter;
    text-align: center;
    border-radius: 0.5rem;
    overflow: hidden;

    -webkit-box-shadow: inset 0 3px 0 #fff, 0 0 0 1px rgba(0,0,0,0.05), 0 8px 16px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.05), 0 2px 4px rgba(0,0,0,0.1);
    -moz-box-shadow:    inset 0 3px 0 #fff, 0 0 0 1px rgba(0,0,0,0.05), 0 8px 16px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.05), 0 2px 4px rgba(0,0,0,0.1);
    box-shadow:         inset 0 3px 0 #fff, 0 0 0 1px rgba(0,0,0,0.05), 0 8px 16px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.05), 0 2px 4px rgba(0,0,0,0.1);
}

.header {
    position: relative;
    font-size: 2rem;
    margin: 2rem 2rem 1rem;

    .name {
        font-family: 'Roboto Slab', serif;
        font-weight: 700;
    }
}

.content {
    margin: 1rem 2rem 2rem;

    a {
        color: $gradient2;

        &:link { 
            color: $gradient2;
        }

        &:hover {
            background-color: $gradient2;
            background-color: $gray;
        }

        &:active {
            background-color: $gray-dark;
        }
    }
}

.social {
    padding: 0.5rem 1rem;
    font-size: 2rem;
    color: #fff;

    background: -webkit-linear-gradient(right, $gradient1, $gradient2);
    background: -o-linear-gradient(right, $gradient1, $gradient2);
    background: -moz-linear-gradient(right, $gradient1, $gradient2);
    background: linear-gradient(right, $gradient1, $gradient2);

    ul {
        list-style: none;
        margin: 0;
        padding: 0;

        li {
            display: inline-block;

            a {
                color: #fff;
                width: 2.5rem;
                height: 2.5rem;
                display: inline-block;
                border-radius: 0.5rem;

                &:hover {
                    background: rgba(255, 255, 255, 0.2);
                }

                i.fa {
                    line-height: 2.5rem;
                }
            }
        }
    }
}


.posts {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.post {
    & + .post {
        margin-top: 0.67rem;
    }
    .post-date {
        font-size: 0.8rem;
    }
}

.pagination, .post-nav {
    border-top: 1px dashed $gray;
    padding-top: 1rem;
    margin-top: 1rem;
    font-size: 0.8em;
}

.paginator-prev,
.paginator-next {
    position: absolute;
    padding: 0.5rem;
}
.paginator-prev {
    left: 0;

    &:hover::after {
        font-size: 0.8rem;
        content: "older";
    }
}

.paginator-next {
    right: 0;

    &:hover::before {
        font-size: 0.8rem;
        margin-right: 0.2rem;
        content: "newer";
    }
}

.vertical-center {
    top: 50%;
    transform: translateY(-50%);
}

